--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Recipe</title>
 </head>
 <body>
-    
+    <div id="main" class="main">
+        <h3 id="heading" class="heading">Here are some interesting recipes!</h1>
+        <div id="form">
+            <label id="label">Enter ingredient:</label>
+            <input id="input" name="input" placeholder="Enter a food ingredient">
+            <button id="input-button" name="input-button">Submit</button>
+        </div>
+    </div>
+    <script src="main1.js" type="module"></script>
 </body>
 </html>
