--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles1.css" type="text/css">
 </head>
 <body>
     <div id="main" class="main">
         <h3 id="heading" class="heading">Here are some interesting recipes!</h1>
         <div id="form">
-            <label id="label">Enter ingredient:</label>
-            <input id="input" name="input" placeholder="Enter a food ingredient">
+            <label id="label">Click submit for delicious recipes</label>
             <button id="input-button" name="input-button">Submit</button>
         </div>
     </div>
