--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Recipe</title>
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles1.css" type="text/css">
+    <link rel="stylesheet" href="styles2.css" type="text/css">
 </head>
 <body>
     <div id="main" class="main">
@@ -16,6 +16,7 @@
             <button id="input-button" name="input-button">Submit</button>
         </div>
     </div>
-    <script src="main1.js" type="module"></script>
+    <p>hello</p>
+    <script src="main.js" type="module"></script>
 </body>
 </html>
